--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <p>Lts was founded in 2022. Our shop was built from a <b>love of tacos</b>🌮🌮🌮. We hope <br>
         Our shop adds a unique and interesting place to our little town.</p>
         <h2>Taco Trivia</h2>
+        <details>
+            <summary>When did Tacos first appear in the United States?</summary>
+            <p>Jeffery M.pilcher, taco historian and professor history at the University of Minnesota, <br>
+            says the earliest mention of tacos in the United states are in a newspaper from 1905. <br>
+        Source: <a href="">Smitsomian Magazine</a></p>
+        </details>
+
     </div>
     </div>
 </body>
