Added the details Section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <summary>When did Tacos first appear in the United States?</summary>
             <p>Jeffery M.pilcher, taco historian and professor history at the University of Minnesota, <br>
             says the earliest mention of tacos in the United states are in a newspaper from 1905. <br>
-        Source: <a href="">Smitsomian Magazine</a></p>
+        Source: <a href="Google.com">Smitsomian Magazine</a></p>
         </details>
 
     </div>
