--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/Styles.css">
     <title>Tic-Tac-Toe Shop</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">About LTS</a></li>
-                <li><a href="menu.html">Our Menu</a></li>
+                <li><a href="#menu">Our Menu</a></li>
                 <li><a href="#About">Store hours</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -33,8 +34,58 @@
             says the earliest mention of tacos in the United states are in a newspaper from 1905. <br>
         Source: <a href="Google.com">Smitsomian Magazine</a></p>
         </details>
-
     </div>
+    <div class="Menu" id="menu">
+        <h2>Our Menu</h2>
+        <table>
+            <caption>Our Tacos</caption>
+            <thead>
+                <tr>
+                    <th>Tacos</th>
+                    <th>Qty</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="2">Crunchy</td>
+                    <td>1</td>
+                    <td>$1.50</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>$2.50</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>3</td>
+                    <td>$3.35</td>
+                </tr>
+
+                <tr>
+                    <td rowspan="2">Soft</td>
+                    <td>1</td>
+                    <td>$2.00</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>$3.50</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>3</td>
+                    <td>$4.50</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3" >Chips & Salsa $2</td>
+                </tr>
+            </tfoot>
+            
+        </table>
+    </div>
+
     </div>
 </body>
 </html>
