Added The footer Section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header-nav">
+        <div class="header-nav" id="nav">
         <h1>Welcome to the Little Taco Shop</h1>
         <nav>
             <ul>
@@ -40,51 +40,57 @@
         <table>
             <caption>Our Tacos</caption>
             <thead>
-                <tr>
-                    <th>Tacos</th>
-                    <th>Qty</th>
-                    <th>Price</th>
-                </tr>
+              <tr>
+                <th>Tacos</th>
+                <th>Qty</th>
+                <th>Price</th>
+              </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td rowspan="2">Crunchy</td>
-                    <td>1</td>
-                    <td>$1.50</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>$2.50</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>3</td>
-                    <td>$3.35</td>
-                </tr>
-
-                <tr>
-                    <td rowspan="2">Soft</td>
-                    <td>1</td>
-                    <td>$2.00</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>$3.50</td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>3</td>
-                    <td>$4.50</td>
-                </tr>
+              <tr>
+                <td rowspan="3">Crunchy</td>
+                <td>1</td>
+                <td>$1.50</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>$2.50</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>$3.35</td>
+              </tr>
+              <tr>
+                <td rowspan="3">Soft</td>
+                <td>1</td>
+                <td>$2.00</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>$3.50</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>$4.50</td>
+              </tr>
             </tbody>
             <tfoot>
-                <tr>
-                    <td colspan="3" >Chips & Salsa $2</td>
-                </tr>
+              <tr>
+                <td colspan="3" style="text-align: center; color: gray;">Chips & Salsa $2</td>
+              </tr>
             </tfoot>
-            
-        </table>
+          </table>
+          <br>
+          <br>
+          <br>
+
+          <a href="#nav">Back to Top</a>
     </div>
+    <hr>
+
+    <footer>
+        <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
 
     </div>
 </body>
