Added the Hours.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">About LTS</a></li>
                 <li><a href="#menu">Our Menu</a></li>
-                <li><a href="#About">Store hours</a></li>
+                <li><a href="hours.html">Store hours</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
