Added the contact section

--- a/hours.html
+++ b/hours.html
@@ -9,20 +9,34 @@
 <body>
     <div class="container">
         <div class="header-nav" id="nav">
-            <h1>Welcome to the Little Taco Shop</h1>
+            <h1>Little Taco Shop Hours</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#About">About LTS</a></li>
-                    <li><a href="#menu">Our Menu</a></li>
+                    <li><a href="index.html#about">About LTS</a></li>
+                    <li><a href="index.html#menu">Our Menu</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="description">
                 <img src="img/tacos_tray_400x267.png" alt="Image describing the food">
-                <figcaption>Tacos and Drink</figcaption>
+                <figcaption>A tray of Tasty Tacos</figcaption>
             </div>
     </div>
+    <hr>
+    <p>We are open 7 days a week</p>
+    <br>
+    <p>Sunday-Thursday</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 11am-9pm</p>
+    <p>Friday-Saturday</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 11am-11pm</p>
+
+    <a href="#nav">Back to Top</a>
+    <hr>
+    <footer>
+        <p>Copyright &copy; The Little Taco Shop</p>
+    </footer>
     </div>
+    
 </body>
 </html>
